--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "add": "^2.0.6",
     "expo": "~41.0.1",
+    "expo-av": "^9.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-screens": "^3.3.0",
+    "react-native-track-player": "^1.2.7",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
